Updated PlaidService and TransactionService